# freefare

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: error.rs  felica.rs  ffi.rs  freefare.rs  lib.rs  mad.rs  mifare.rs  ntag21x.rs  tlv.rs
